adding new use cases to address some comments from @jmwright

--- a/use-cases/01-Every-component-is-coming-from-its-own-repo.adoc
+++ b/use-cases/01-Every-component-is-coming-from-its-own-repo.adoc
@@ -4,6 +4,7 @@ J. Simmons <jrs@mach30.org>
 :revdate: 09-24-2018
 :revremark: First draft
 
+== Remarks
 * maximizes reuse and composition
 * increases project complexity as every component must be tracked in its own repo and have its own configuration 
 * leads to repos spawning faster than tribbles 
