--- a/dof-methodology.adoc
+++ b/dof-methodology.adoc
@@ -18,6 +18,9 @@ J. Simmons <jrs@mach30.org>
 . All components of an OSHW project are listed in its Bill of Materials (BoM)
 . BoMs only define the components of the current project scope; Assembly components have their own independent BoMs 
 . OSHW (and OSS) projects must include build instructions as part of their "source"; in other words, a BoM or a collection of files with code is not sufficient to define an open source project
+. Components may be built from other components and raw materials 
+. Raw materials must be measured and separated from their bulk supply (in some processes the act of measuring includes separation as a side effect, e.g. cooking; in other processes these are distinct steps, e.g. carpentry)
+. Components and raw materials may be defined locally (in current project scope) or externally in their own repo (dependencies)
 
 == Derived Assumptions 
 
@@ -28,27 +31,28 @@ J. Simmons <jrs@mach30.org>
 .. BoM data
 .. Build instructions 
 .. Digital design files for this package (e.g. cad files, code files)
-.. List of dependencies (hardware/software, COTS/Assemblies)
+.. List of dependencies (hardware/software, COTS/Assemblies), if any are required
+.. List of locally defined components, if any are defined
 . A package should support all activities related to building the project up to and including the item defined in the package.  Examples include
 .. Generating BoMs for the package and its dependencies as needed
 .. Generating a purchase list to build the project defined in this package 
 .. Generating build instructions for the project defined in this package (including any dependent build instructions)
 . Therefore, every OSHW project is itself a package 
-. BoMs are generated artificacts built from package level BoM data and information from packages included as dependencies
+. BoMs are generated artifacts built from package level BoM data and information from packages included as dependencies
 . Therefore, if a component is listed in BoM data, it must have already been included as a dependency
 . BoM data consists of
-.. Component ID - pacakge level identifier for this component, used throughout the pacakge source to reference this component, allowing for consistent references in the event of changes to selected alternate part number
-.. Options List - list of verified/allowed/approved source IDs for component implementation (e.g. COTS options, sub-assembly); IDs correspond to ID in dependency list for this package
+.. Component ID - package level identifier for this component, used throughout the pacakge source to reference this component, allowing for consistent references in the event of changes to selected alternate part number
+.. Options List - list of verified/allowed/approved source IDs for component implementation (e.g. COTS options, sub-assembly); IDs correspond to ID in dependency list for this package or in the list of locally defined components (if there is a name collision between the two sources, then the locally defined component is used, this should throw a warning to the user though)
 .. Default Option Index - identifies which entry in the Options List is selected by default
 .. Quantity - number of copies of this component required to build this package, requires a unit of measure (e.g. items for a typical hardware component, physical unit for materials sold by length, weight, mass, or seat/install for software components)
-.. Short Description - human readable descripion suitable for inclusion in documentation 
+.. Name - a short, human readable descripion suitable for inclusion in documentation 
 .. Notes - developer comments on this component
 . Examples of calculated and derived information in BoM
 .. project part numbers
 .. vendor part number
 .. component type (COTS vs Assembly)
 . Specific formats for generated BoMs are left to the discretion of DOF implementations
-. DOF uses component data to determine type of component (COTS vs Assembly, hardware vs software)
+. DOF uses component data to determine type of component (COTS vs Assembly, hardware vs software) *this section needs to be reworked*
 .. If BoM data is present component is hardware, otherwise it is software
 .. If manufacturer data is present component is COTS, otherwise it is an Assembly
 
@@ -57,6 +61,8 @@ J. Simmons <jrs@mach30.org>
 This methodology covers the process of documenting and sharing OSHW projects, it does not cover the art and science of design.  Clearly, each decision discussed below is the result of the hard work of the developer(s) contributing to the project.
 
 === Developing Projects
+
+*All of this needs to be reworked.*
 
 .Starting a Project
 . Create directory for new project source
@@ -81,19 +87,20 @@ NOTE: Package management tools used with DOF need to include the concept of upda
 
 === Generating BoMs
 
-While BoMs are scoped at the level of the current package, it is helpful to produce a single document containing the collection of BoMs included within the project hierarchy (computed via dependencies).  So, we will first discuss generating the current scope BoM and then the collection of BoMs.
+While BoMs are scoped at the level of the current package, it is helpful to produce a single document containing the collection of BoMs included within the project hierarchy.  So, we will first discuss generating the current scope BoM and then the collection of BoMs.
 
 ==== Generating BoM for Current Package
 
 .Uses
 * BoM data 
 * Dependency data
+* List of locally defined components
 
 . Select initial part number and part number format (critical when generating overall project level part numbers) 
 . Iterate over BoM data, for each component
 .. Generate part number
 .. Select specific component source from Options List for any components with more than one option
-.. Read in component information from package for selected component source
+.. Read in component information from package for selected component source (recall locally defined components take precedence over dependencies with the same ID)
 .. Combine package level info with BoM data and other calculated values to create an entry in the BoM
 . Write out human readable version of BoM
 . Save a cache of full calculated/derived BoM information for use in other source materials (e.g. purchase list, build instuctions)
@@ -104,10 +111,10 @@ While BoMs are scoped at the level of the current package, it is helpful to prod
 * Dependency Lists
 * BoM data from packages in dependency heirarchy
 
-. Generate a full project dependency list by walking the dependency graph defined by the project’s dependency lists at all levels of the project heirarchy
+. Generate a full project dependency list by walking the dependency graph defined by the project’s BoM data and dependency lists at all levels of the project heirarchy
 . Create a new empty document
 . Select part numbering scheme (e.g. per package part numbering or overall project level numbering) and part number format
-. Create a new section for each package in the dependency list with BoM data (typically Hardware Assemblies), and use the package BoM data to generate its BoM in this section per above
+. *REWORK - not all dependencies are used, so select based on BoM data* Create a new section for each package in the dependency list with BoM data (typically Hardware Assemblies), and use the package BoM data to generate its BoM in this section per above
 
 === Generating Purchase List
 
