--- a/README.adoc
+++ b/README.adoc
@@ -1,7 +1,7 @@
 = Distributed OSHW Framework (DOF)
 J. Simmons <jrs@mach30.org>
-:revnumber: v0.1.1
-:revdate: 11/25/2018
+:revnumber: v0.1.2
+:revdate: 12/11/2018
 
 // github specific things
 ifdef::env-github[]
@@ -60,7 +60,7 @@ The source of an OSHW project is its:  *Bill of Materials Data* (list of compone
 
 == Methodology Documentation
 
-The methodology is being modeled in a series of YAML files under the `architecture` folder.  A script is then used to generate the this readme and the DOF architecture document (located in the `dist` folder).  See the `docs` folder for mataterial on the format of the architecture YAML files.
+The methodology is being modeled in a series of YAML files under the `architecture` folder.  A script is then used to generate this readme and the DOF architecture document (located in the `dist` folder).  See the `docs` folder for mataterial on the format of the architecture YAML files.
 
 Please feel free to join the conversation by posting questions/comments as issues in the http://dof.sliderule.io[DOF repository].
 
