--- a/README.adoc
+++ b/README.adoc
@@ -1,3 +1,23 @@
+= Distributed OSHW Framework (DOF)
+J. Simmons <jrs@mach30.org>
+:revnumber: v0.1.6
+:revdate: 6/25/2021
+
+// github specific things
+ifdef::env-github[]
+:tip-caption: :bulb:
+:note-caption: :information_source:
+:important-caption: :heavy_exclamation_mark:
+:caution-caption: :fire:
+:warning-caption: :warning:
+:imagesdir: https://raw.githubusercontent.com/Mach30/dof/master/dist/images
+endif::[]
+
+// non-github specific things
+ifndef::env-github[]
+:imagesdir: ./dist/images
+endif::[]
+
 == Introduction
 
 Mach 30 launched https://opendesignengine.net[Open Design Engine] (ODE) in 2012. Since then we have run our own OSHW projects on ODE, observed other groups host OSHW projects on ODE and other sites, and held numerous conversations on and offline about the nature of hosting OSHW projects.  Our conclusion after all these years and experience is the same one we held back in 2012:  the OSHW community is still searching for a project hosting solution that meets the needs of hardware projects (where documentation is part of the source code).
@@ -12,13 +32,39 @@ The Distributed OSHW Framework will be a systematic approach identifying:
 
 Note how developing a methodology is different from identifying best practices, covering case studies, and creating definitions.  A methodology is something one follows; it is a fully defined process.  And by targeting tool independence, we can aim for developing a solution that will stand the test of time, just as version control methods have lasted through cvs, svn, and now git.
 
-=== Methodology Documentation
+== The Pillars of the DOF
 
-The methodology is being modeled in a series of YAML files under the `architecture` folder.  A script is then used to generate this readme and the DOF architecture document (located in the `dist` folder).  See the `docs` folder for mataterial on the format of the architecture YAML files.
+The Distributed OSHW Framework (DOF) is built upon 4 pillars.  All design decisions for DOF are ultimately derived from one or more of these pillars.
+
+
+.1: OSHW Definition
+****
+OSHW projects should be developed and shared in accordance to the https://www.oshwa.org/definition/[OSHW Definition].
+**** 
+
+.2: OSHW Certification
+****
+OSHW projects should be developed and shared in accordance to the https://certification.oshwa.org/process.html[OSHW Certification process].
+**** 
+
+.3: OSHW should be like OSS
+****
+Open Source Hardware should be like Open Source Software to the greatest degree possible (e.g. sharing, development, licensing).
+**** 
+
+.4: OSHW Source Definition
+****
+The source of an OSHW project is its:  *Bill of Materials Data* (list of components and counts covering all parts which must be purchased to build the project), *Assembly Instructions* (complete list of instructions to build the project from its purchased parts), and *Supporting Documentation* (e.g. design files, schematics, operating instructions)
+**** 
+
+
+== Methodology Documentation
+
+The methodology is being modeled in a series of YAML files under the `architecture` folder.  A script is then used to generate this readme and the DOF architecture document (located in the `dist` folder).  See the `docs` folder for material on the format of the architecture YAML files.
 
 Please feel free to join the conversation by posting questions/comments as issues in the http://dof.sliderule.io[DOF repository].
 
-=== Related Projects
+== Related Projects
 
 .Mach 30 Related Projects
 * https://opendesignengine.net[Open Design Engine] - legacy OSHW project hosting portal built on https://www.redmine.org/[Redmine]
@@ -28,6 +74,6 @@ Please feel free to join the conversation by posting questions/comments as issue
 .Sources of Inspiration
 * http://github.howstr.com/[Howstr] - A project by Matthew Maier to capture how to capture, share, and discover tangible projects
 
-=== Further Reading
+== Further Reading
 
 * https://www.pearson.com/us/higher-education/product/Gibb-Building-Open-Source-Hardware-DIY-Manufacturing-for-Hackers-and-Makers/9780133373905.html[Building Open Source Hardware: DIY Manufacturing for Hackers and Makers] by Alicia Gibb
